--- a/links-same-page.html
+++ b/links-same-page.html
@@ -20,71 +20,70 @@
     <section id="section1">
 
       section 1 content blah blah blah .......
-      gfdsgsgrf
-      hdhdtdtu
-      hgdgjdgjgj
-      jhrdgjgjn
-      jdgfjdgjdgfjd
-      gjdjdjmdfjdj
-      jdgjgdhjjdf
-
+      gfdsgsgrf <br>
+      hdhdtdtu<br>
+      jhrdgjgjn<br><br>
+      hgdgjdgjgj<br><br>
+      jdgfjdgjdgfjd<br>
+      gjdjdjmdfjdj<br>
+      jdgjgdhjjdf<br>
+<br>
     </section>
 
     <section id="section2">
 
       section 2 content blah blah blah .......
-      gfdsgsgrf
-      hdhdtdtu
-      hgdgjdgjgj
-      jhrdgjgjn
-      jdgfjdgjdgfjd
-      gjdjdjmdfjdj
-      jdgjgdhjjdf
-
+    <br>  gfdsgsgrf
+      <br>hgdgjdgjgj
+      <br>hdhdtdtu
+      jhvrdgjgjn<br>
+      jdgfjdgjdgfjd<br>
+      gjdjdjmdfjdj<br>
+      jdgjgdhjjdf<br>
+<br>
     </section>
 
     <section id="section3">
 
-      section 3 content blah blah blah .......
-      gfdsgsgrf
-      hdhdtdtu
+      section 3 content blah blah blah .......<br>
+      gfdsgsgrf<br>
       hgdgjdgjgj
       jhrdgjgjn
+      hdhdtdtu<br><br><br>
       jdgfjdgjdgfjd
-      gjdjdjmdfjdj
-      jdgjgdhjjdf
-
+      jdgjgdhjjdf<br>
+      gjdjdjmdfjdjv
     </section>
 
     <section id="section4">
 
-      section 4 content blah blah blah .......
-      gfdsgsgrf
-      hdhdtdtu
-      hgdgjdgjgj
+      section 4 content blah blah blah .......<br>
+      gfdsgsgrf<br>
+      hdhdtdtu<br>
       jhrdgjgjn
-      jdgfjdgjdgfjd
-      gjdjdjmdfjdj
-      jdgjgdhjjdf
+      hgdgjdgjgj<br>
+      jdgfjdgjdgfjdv
+      gjdjdjmdfjdj<br>
+      jdgjgdhjjdf<br>
 
     </section>
 
     <section id="section5">
 
-      section 5 content blah blah blah .......
-      gfdsgsgrf
-      hdhdtdtu
-      hgdgjdgjgj
-      jhrdgjgjn
-      jdgfjdgjdgfjd
-      gjdjdjmdfjdj
-      jdgjgdhjjdf
+      section 5 content blah blah blah .......<br><br>
+      gfdsgsgrf<br>
+      hdhdtdtu<br><br>
+      hgdgjdgjgj<br>
+      jhrdgjgjn<br><br><br>
+      jdgfjdgjdgfjd<br>
+      gjdjdjmdfjdj<br>
+      jdgjgdhjjdf<br>
 
     </section>
 
     <section id="section6">
       section 6 content blah blah blah .........
-      <a href="#top">()#top) go to top</a>
+      <a href="#top">go to top</a>
     </section>
   </body>
 </html>
