--- a/child-selector-before.html
+++ b/child-selector-before.html
@@ -8,7 +8,7 @@
        element i.e. any article element whose immediate parent is a section of
        element */
 
-       xxx {
+       section>article {
          color: green;
          font-size: 24px;
        }
@@ -16,7 +16,7 @@
        /*Any h2 element which is a direct child of a section element i.e. any
        h2 element whose immediate parent is a section element*/
 
-       xxx {
+       section>h2 {
          color: green;
        }
      </style>
