--- a/descendant-selecor-before.html
+++ b/descendant-selecor-before.html
@@ -6,7 +6,7 @@
     <style media="screen">
       /*all li elements that are inside a section element*/
 
-      xxx {
+      section li {
         color: green;
       }
     </style>
