--- a/conflict-origin/origin.html
+++ b/conflict-origin/origin.html
@@ -12,6 +12,6 @@
 <body>
 	<h1>Origin Example</h1>
 	<p>The rule is simple: last declaration wins.</p>
-	<p style="color: black;"></p>
+	<p style="color: black;">If there is no conflict, declaration merge into one rule.</p>
 </body>
 </html>
