--- a/specificity.html
+++ b/specificity.html
@@ -3,17 +3,17 @@
  <head>
  	<title>Inheritance in CSS</title>
  <style type="text/css">
- 	header.navigation p {
+ 	header.navigation p { /*12 points*/
  		color: blue;
  	}
 
- 	p.blurb {
+ 	p.blurb {/*11 points*/
  		color: red;
  	}
 
- /*	p {
+ 	p {
  		color: green !important;
- 	}*/
+ 	}
  </style>
  </head>
  <body>
