--- a/styling-text-before.html
+++ b/styling-text-before.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">	
 	<title>Styling Text</title>
 <style type="text/css">
+	.style{
 	font-family: Arial, Helvetica, sans-serif;
 	color: #0000ff;
 	font-style: italic;
@@ -10,6 +12,7 @@
 	font-size: 24px;
 	text-transform: uppercase;
 	text-align: right;
+}
 </style>
 </head>
 <body>
