--- a/box-model-before.html
+++ b/box-model-before.html
@@ -3,16 +3,31 @@
 <head>
 	<title>The Box Model</title>
 <style type="text/css">
+	* {
+		box-sizing: border-box; /*used in industry for front-end*/
+		margin: 0;
+		padding: 0;
+	}
+
 	body {
+		/*margin: 0;
+		padding: 0;*/
 		background-color: grey;
+		/*box-sizing: border-box; /*used in industry for front-end
+		*/	
 	}
 
 	#box {
 		background-color: blue;
-	}
+		padding: 10px 30px 10px 30px;
+		border: 5px solid black;
+		/*margin: 40px;*/
+		width: 300px;
+		/*box-sizing: border-box; /*used in industry for front-end*/
+		margin-top: 50px;	}
 
 	#content {
-		background-color: #90EE90; /*green*/
+		background-color: #90EE90; /*light green*/
 	}
 
 	h1 {
