--- a/positioning-elements.html
+++ b/positioning-elements.html
@@ -44,4 +44,15 @@
     </style>
 </head>
 
+<body>
+    <h1>Positioning Elements</h1>
+
+    <div id="container">
+        <p id="p1"></p>
+        <p id="p2"></p>
+        <p id="p3"></p>
+        <p id="p4"></p>
+    </div>
+</body>
+
 </html>
