--- a/responsive-before.html
+++ b/responsive-before.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width" , initial-scale=1>
     <title>Responsive Layout</title>
     <style>
         /******************Base Styles********************/
@@ -80,10 +81,10 @@
                 width: 83.33%;
             }
             .col-lg-11 {
-                width: 100%;
+                width: 91.66%;
             }
             .col-lg-12 {
-                width: 8.33%;
+                width: 100%;
             }
         }
         /************Medium Devices Only************/
@@ -137,10 +138,10 @@
                 width: 83.33%;
             }
             .col-md-11 {
-                width: 100%;
+                width: 91.66%;
             }
             .col-md-12 {
-                width: 8.33%;
+                width: 100%;
             }
         }
     </style>
