Assignment - Responsive Website

--- a/Assignment - Responsive Website Basic/index.html
+++ b/Assignment - Responsive Website Basic/index.html
@@ -9,34 +9,31 @@
 </head>
 
 <body>
-    <h1>Responsive Layout</h1>
+    <h1>Our Menu</h1>
 
-    <div class="row">
-        <div class="col-lg-3 col-md-6">
-            <p>Item 1</p>
-        </div>
-        <div class="col-lg-3 col-md-6">
-            <p>Item 2 Wow this is cool</p>
-        </div>
-        <div class="col-lg-3 col-md-6">
-            <p>Item 3</p>
-        </div>
-        <div class="col-lg-3 col-md-6">
-            <p>Item 4</p>
-        </div>
-        <div class="col-lg-3 col-md-6">
-            <p>Item 5</p>
-        </div>
-        <div class="col-lg-3 col-md-6">
-            <p>Item 6</p>
-        </div>
-        <div class="col-lg-3 col-md-6">
-            <p>Item 7</p>
-        </div>
-        <div class="col-lg-3 col-md-6">
-            <p>Item 8</p>
-        </div>
-    </div>
+    <section class="row">
+
+        <section class="col-lg-3 col-md-6 col-sm-9">
+            <div id="container">
+                <p class="title1">Chicken</p>
+                <p class="text">Item 1</p>
+            </div>
+        </section>
+
+        <section class="col-lg-3 col-md-6 col-sm-9">
+            <div id="container">
+                <p class="title2">Mutton</p>
+                <p class="text">Item 2 Wow this is cool</p>
+            </div>
+        </section>
+
+        <section class="col-lg-3 col-md-6 col-sm-9">
+            <div id="container">
+                <p class="title3">Sushi</p>
+                <p class="text">Item 3</p>
+            </div>
+        </section>
+    </section>
 </body>
 
 </html>
